--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 google-generativeai = "^0.8.1"
 loguru = "^0.7.2"
 python-dotenv = "^1.0.1"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
