meta: add git cliff to generate changelogs
+ Install `git-cliff`
+ Add `git-cliff` configuration file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ isort = "^5.13.2"
 pytest = "^8.3.3"
 mypy = "^1.11.2"
 autoflake = "^2.3.1"
+git-cliff = "^2.6.1"
 
 [build-system]
 requires = ["poetry-core"]
