--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ package-mode = false
 python = "^3.12"
 google-generativeai = "^0.8.1"
 python-dotenv = "^1.0.1"
-click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
@@ -19,6 +18,8 @@ isort = "^5.13.2"
 pytest = "^8.3.3"
 mypy = "^1.11.2"
 autoflake = "^2.3.1"
+
+[tool.poetry.group.release.dependencies]
 git-cliff = "^2.6.1"
 
 [build-system]
