meta: add jupyter
+ Update devcontainer file
+ Update `Makefile`
+ Install jupyter lab

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,7 @@
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
+				"ms-toolsai.jupyter",
 				"github.copilot",
 				"tamasfe.even-better-toml"
 			]
