--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.12"
 google-generativeai = "^0.8.1"
 python-dotenv = "^1.0.1"
 pillow = "^11.0.0"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.10.0"}
