build(devcontainer): update container configuration
+ Install `tig`, `git-flow` and `neovim`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,12 @@
 		"--cpus", "1"
 	],
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/poetry": {}
+		"ghcr.io/devcontainers-contrib/features/poetry": {},
+		"ghcr.io/devcontainers-extra/features/apt-get-packages": {
+			"packages": [
+				"tig", "git-flow", "neovim"
+			]
+		}
 	},
 	"customizations": {
 		"vscode": {
